# radical-degradation-kinetics

./: .gitignore  README.md  pyproject.toml
demo/: benchmark_ml_potentials.py  demo_pipeline.py  sample_molecules.csv
src/radical_degradation/: __init__.py  benchmark.py  dft.py  fetch.py  fragments.py  preopt.py
tests/: test_pipeline.py
