[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "radical-degradation-kinetics"
version = "0.1.0"
description = "Compact cheminformatics and DFT workflow for radical-driven pharmaceutical degradation kinetics."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
]

[project.optional-dependencies]
chem = [
  "rdkit",
  "pubchempy",
]
ml = [
  "ase",
]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
